# cave-light-sensor

common-data/src/: request.rs  response.rs
electronics/: notes.md
electronics/OPT3001DNPRQ1/KiCADv6/: 2025-01-09_17-26-39.kicad_sym
electronics/OPT3001DNPRQ1/KiCADv6/footprints.pretty/: DNP0006A.kicad_mod
electronics/cave-part-lib/: cave-lib.kicad_sym
electronics/cave-part-lib/cave-lib.3dshapes/: QFN-20_L3.0-W3.0-H0.6-P0.50-BL.step  QFN-20_L3.0-W3.0-H0.6-P0.50-BL.wrl  WSON-8_L4.0-W4.0-H0.8-P0.80.step  WSON-8_L4.0-W4.0-H0.8-P0.80.wrl
electronics/cave-part-lib/cave-lib.pretty/: QFN-20_L3.0-W3.0-P0.50-BL.kicad_mod  SO-8_L4.9-W3.9-P1.27-LS6.0-BL.kicad_mod  WSON-6_L2.0-W2.0-P0.65-BL-EP.kicad_mod  WSON-8_L4.0-W4.0-P0.80-BL-EP.kicad_mod
electronics/dev-board/dev-board/: dev-board.kicad_prl  dev-board.kicad_pro  dev-board.kicad_sch
example_lprun/: NOTES.md
example_lprun/.cargo/: config.toml
example_lprun/src/: main.rs
example_lprun/test_embassy_rtic/: Cargo.toml  Embed.toml
example_lprun/test_embassy_rtic/src/: main.rs
sensor/: Cargo.toml
sensor/opt3001/: Cargo.toml
sensor/opt3001/src/: lib.rs  opt_measurment.rs  registers.rs
sensor_old/src/: main.rs
sensor_old/src/tasks/: mod.rs  uart_interrupt.rs
test_embassy_rtic/: nucleo_l010rb_pins.txt  rust-toolchain
test_embassy_rtic/src/: main.rs
