[package]
name = "test_embassy_rtic"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version ="0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
rtic = { version = "2.1.2", features = ["thumbv6-backend"]}
panic-probe = "0.3.2"
defmt = "0.3"
defmt-rtt = "0.4"
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
stm32l0 = { version = "0.15.1", features = ["cortex-m-rt", "stm32l0x0"] }


[profile.dev]
opt-level = 's'
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 's'
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.release.package."*"] # +
opt-level = "s" # +
